2009-07-31  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.97.
	* NEWS: Update.

	* src/bridge.py (copy_data, StoringProxy.stored_read)
	* src/utils.py (u8_unpack, u32_unpack, read_fields): Rename "bytes"
	to avoid a conflict with a built-in.

	* src/settings.py.in (koji_do_proxy_auth): New variable.
	* src/bridge.py (SignRpmRequestType.__koji_get_session): Proxy
	authenticate as the client if settings allow it.
	* README: Document proxy authentication is now required.

	* src/double_tls.py (DoubleTLSClient.inner_open_server): Log the subject
	of the client's certificate in the server.

	* README: Explicitly mention that host names in configuration must match
	host names in certificates.

	* src/server.py (ServersConnection.read_request): close() the temporary
	file to force it to be written to disk.

	* src/bridge.py (SignRpmRequestType.forward_reply_payload): Remove an
	obsolete comment.

	* src/bridge.py (SignRpmRequestType.__init__): Don't initialize an
	unused member.
	(SignRpmRequestType.__init__, SignRpmRequestType.__koji_get_session):
	Only read koji configuration once.

2009-07-30  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (SignRpmRequestType.close): Don't keep cached
	self.__koji_rpm_info between requests.

	* src/server.py (cmd_sign_rpm): Handle source RPMS specially.

	* src/client.py (cmd_sign_rpm)
	* src/server.py (cmd_sign_rpm): Fix handling of epoch returned from
	Koji.

2009-07-23  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.96.
	* NEWS: Update.

2009-07-22  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py	(SignRpmRequestType.forward_reply_payload): Don't
	attempt to parse empty payloads as RPMs.  Handle corrupted RPMs.

	* src/bridge.py (SignRpmRequestType.forward_reply_payload): close()
	tmp_file to force it to be written to disk, flush() apparently isn't
	enough.

	* src/bridge.py (SignRpmRequestType.__koji_get_session): Authenticate
	when connecting to Koji.
	* README (server): Update.
