@@ -1,3 +1,8 @@
+2010-03-10  Miloslav Trmač  <mitr@redhat.com>
+
+	* src/bridge.py (SignRpmRequestType.forward_request_payload): Work with
+	recent urlgrabber as well.
+
 2009-07-31  Miloslav Trmač  <mitr@redhat.com>
 
 	* configure.ac: Release 0.97.
